lld/test/error-atom-content-byte-value.objtxt
# RUN: not lld -core %s 2> %t.err
# RUN:   FileCheck < %t.err %s

#
# Test that an invalid hex byte produces a readable error.
#

---
defined-atoms:
    - name:         entry
      scope:        hidden
      content:      [ A5, 00, 4G, 1F ]
  
...


# CHECK:       error: invalid two-digit-hex number
# CHECK:       4G
